--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "udemy react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/webpack-dev-server --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +20,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "import-glob-loader": "^1.1.0",
+    "node-sass": "^4.14.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
